test_src/compiler_errors/literals/LongTooLargeError2.b
class LongTooLargeError2 {
    void test() {
        println(12345678901234567890L);
    }
}
